@@ -1,12 +1,12 @@
 package io.openaev.rest.executor;
 
-import static io.openaev.service.EndpointService.JFROG_BASE;
 import static io.openaev.service.EndpointService.SERVICE;
 import static io.openaev.utils.AgentUtils.AVAILABLE_ARCHITECTURES;
 import static io.openaev.utils.AgentUtils.AVAILABLE_PLATFORMS;
+import static io.openaev.utils.SecurityUtils.validateJFrogUri;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import io.openaev.aop.RBAC;
+import io.openaev.aop.AccessControl;
 import io.openaev.database.model.*;
 import io.openaev.database.repository.ExecutorRepository;
 import io.openaev.database.repository.TokenRepository;
@@ -32,7 +32,6 @@ import jakarta.validation.Valid;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
 import java.time.Instant;
 import java.util.Optional;
 import lombok.RequiredArgsConstructor;
@@ -68,7 +67,7 @@ public class ExecutorApi extends RestBehavior {
   @Resource protected ObjectMapper mapper;
 
   @GetMapping(EXECUTOR_URI)
-  @RBAC(actionPerformed = Action.READ, resourceType = ResourceType.ASSET)
+  @AccessControl(actionPerformed = Action.READ, resourceType = ResourceType.ASSET)
   @Operation(
       summary = "Retrieve executors",
       description = "Retrieve all executors and pending executors if includeNext is true")
@@ -89,7 +88,7 @@ public class ExecutorApi extends RestBehavior {
   }
 
   @GetMapping(EXECUTOR_URI + "/{executorId}")
-  @RBAC(
+  @AccessControl(
       resourceId = "#collectorId",
       actionPerformed = Action.READ,
       resourceType = ResourceType.ASSET)
@@ -98,7 +97,7 @@ public class ExecutorApi extends RestBehavior {
   }
 
   @GetMapping(EXECUTOR_URI + "/{executorId}/related-ids")
-  @RBAC(
+  @AccessControl(
       resourceId = "#executorId",
       actionPerformed = Action.READ,
       resourceType = ResourceType.ASSET)
@@ -116,7 +115,7 @@ public class ExecutorApi extends RestBehavior {
   }
 
   @PutMapping(EXECUTOR_URI + "/{executorId}")
-  @RBAC(
+  @AccessControl(
       resourceId = "#executorId",
       actionPerformed = Action.WRITE,
       resourceType = ResourceType.ASSET)
@@ -132,7 +131,7 @@ public class ExecutorApi extends RestBehavior {
       value = EXECUTOR_URI,
       produces = {MediaType.APPLICATION_JSON_VALUE},
       consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE})
-  @RBAC(actionPerformed = Action.WRITE, resourceType = ResourceType.ASSET)
+  @AccessControl(actionPerformed = Action.WRITE, resourceType = ResourceType.ASSET)
   @Transactional(rollbackOn = Exception.class)
   public Executor registerExecutor(
       @Valid @RequestPart("input") ExecutorCreateInput input,
@@ -192,7 +191,7 @@ public class ExecutorApi extends RestBehavior {
   @GetMapping(
       value = "/api/agent/executable/openaev/{platform}/{architecture}",
       produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
-  @RBAC(skipRBAC = true)
+  @AccessControl(skipRBAC = true)
   public @ResponseBody ResponseEntity<byte[]> getOpenAevAgentExecutable(
       @Parameter(
               description =
@@ -230,7 +229,7 @@ public class ExecutorApi extends RestBehavior {
           "openaev-agent-"
               + executorOpenaevBinariesVersion
               + (platform.equals("windows") ? ".exe" : "");
-      in = new BufferedInputStream(new URL(JFROG_BASE + resourcePath + filename).openStream());
+      in = new BufferedInputStream(validateJFrogUri(resourcePath, filename).toURL().openStream());
     }
     if (in != null) {
       HttpHeaders headers = new HttpHeaders();
@@ -260,7 +259,7 @@ public class ExecutorApi extends RestBehavior {
   @GetMapping(
       value = "/api/agent/package/openaev/{platform}/{architecture}/{installationMode}",
       produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
-  @RBAC(skipRBAC = true)
+  @AccessControl(skipRBAC = true)
   public @ResponseBody ResponseEntity<byte[]> getOpenAevAgentPackage(
       @Parameter(
               description =
@@ -308,7 +307,7 @@ public class ExecutorApi extends RestBehavior {
       } else if (executorOpenaevBinariesOrigin.equals(
           "repository")) { // if we want a specific version from artifactory
         filename = filename.concat(executorOpenaevBinariesVersion).concat(".exe");
-        in = new BufferedInputStream(new URL(JFROG_BASE + resourcePath + filename).openStream());
+        in = new BufferedInputStream(validateJFrogUri(resourcePath, filename).toURL().openStream());
       }
       if (in == null) {
         throw new UnsupportedOperationException(
@@ -342,7 +341,7 @@ public class ExecutorApi extends RestBehavior {
         @ApiResponse(responseCode = "404", description = "Token not found."),
       })
   @GetMapping(value = "/api/agent/installer/openaev/{platform}/{installationMode}/{token}")
-  @RBAC(skipRBAC = true)
+  @AccessControl(skipRBAC = true)
   public @ResponseBody ResponseEntity<String> getOpenAevAgentInstaller(
       @Parameter(
               description =
