@@ -2,13 +2,13 @@ package io.openaev.rest.injector;
 
 import static io.openaev.database.specification.InjectorSpecification.byName;
 import static io.openaev.helper.StreamHelper.fromIterable;
-import static io.openaev.service.EndpointService.JFROG_BASE;
 import static io.openaev.utils.AgentUtils.AVAILABLE_ARCHITECTURES;
 import static io.openaev.utils.AgentUtils.AVAILABLE_PLATFORMS;
+import static io.openaev.utils.SecurityUtils.validateJFrogUri;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.databind.JsonNode;
-import io.openaev.aop.RBAC;
+import io.openaev.aop.AccessControl;
 import io.openaev.database.model.*;
 import io.openaev.database.repository.*;
 import io.openaev.rest.catalog_connector.dto.ConnectorIds;
@@ -32,7 +32,6 @@ import jakarta.validation.Valid;
 import java.io.BufferedInputStream;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
 import java.util.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
@@ -70,7 +69,7 @@ public class InjectorApi extends RestBehavior {
   @Operation(
       summary = "Retrieve injectors",
       description = "Retrieve all injectors and pending injectors if includeNext is true")
-  @RBAC(actionPerformed = Action.SEARCH, resourceType = ResourceType.INJECTOR)
+  @AccessControl(actionPerformed = Action.SEARCH, resourceType = ResourceType.INJECTOR)
   @ApiResponse(
       responseCode = "200",
       content =
@@ -88,7 +87,7 @@ public class InjectorApi extends RestBehavior {
   }
 
   @GetMapping(INJECT0R_URI + "/{injectorId}/injector_contracts")
-  @RBAC(
+  @AccessControl(
       resourceId = "#injectorId",
       actionPerformed = Action.READ,
       resourceType = ResourceType.INJECTOR)
@@ -109,7 +108,7 @@ public class InjectorApi extends RestBehavior {
   }
 
   @PutMapping(INJECT0R_URI + "/{injectorId}")
-  @RBAC(
+  @AccessControl(
       resourceId = "#injectorId",
       actionPerformed = Action.WRITE,
       resourceType = ResourceType.INJECTOR)
@@ -130,7 +129,7 @@ public class InjectorApi extends RestBehavior {
   }
 
   @GetMapping(INJECT0R_URI + "/{injectorId}")
-  @RBAC(
+  @AccessControl(
       resourceId = "#injectorId",
       actionPerformed = Action.READ,
       resourceType = ResourceType.INJECTOR)
@@ -139,7 +138,7 @@ public class InjectorApi extends RestBehavior {
   }
 
   @GetMapping(INJECT0R_URI + "/{injectorId}/related-ids")
-  @RBAC(
+  @AccessControl(
       resourceId = "#injectorId",
       actionPerformed = Action.READ,
       resourceType = ResourceType.INJECTOR)
@@ -152,7 +151,7 @@ public class InjectorApi extends RestBehavior {
       value = INJECT0R_URI,
       produces = {MediaType.APPLICATION_JSON_VALUE},
       consumes = {MediaType.APPLICATION_JSON_VALUE, MediaType.MULTIPART_FORM_DATA_VALUE})
-  @RBAC(actionPerformed = Action.CREATE, resourceType = ResourceType.INJECTOR)
+  @AccessControl(actionPerformed = Action.CREATE, resourceType = ResourceType.INJECTOR)
   @Transactional(rollbackOn = Exception.class)
   public InjectorRegistration registerInjector(
       @Valid @RequestPart("input") InjectorCreateInput input,
@@ -163,7 +162,7 @@ public class InjectorApi extends RestBehavior {
   @GetMapping(
       value = "/api/implant/caldera/{platform}/{arch}",
       produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
-  @RBAC(skipRBAC = true)
+  @AccessControl(skipRBAC = true)
   public @ResponseBody byte[] getCalderaImplant(
       @PathVariable String platform, @PathVariable String arch) throws IOException {
     return getCalderaFile(platform, arch, null);
@@ -172,7 +171,7 @@ public class InjectorApi extends RestBehavior {
   @GetMapping(
       value = "/api/implant/caldera/{platform}/{arch}/{extension}",
       produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
-  @RBAC(skipRBAC = true)
+  @AccessControl(skipRBAC = true)
   public @ResponseBody byte[] getCalderaScript(
       @PathVariable String platform, @PathVariable String arch, @PathVariable String extension)
       throws IOException {
@@ -203,7 +202,7 @@ public class InjectorApi extends RestBehavior {
   @GetMapping(
       value = "/api/implant/openaev/{platform}/{architecture}",
       produces = MediaType.APPLICATION_OCTET_STREAM_VALUE)
-  @RBAC(skipRBAC = true)
+  @AccessControl(skipRBAC = true)
   public @ResponseBody ResponseEntity<byte[]> getOpenAevImplant(
       @PathVariable String platform,
       @PathVariable String architecture,
@@ -234,7 +233,7 @@ public class InjectorApi extends RestBehavior {
           "openaev-implant-"
               + executorOpenaevBinariesVersion
               + (platform.equals("windows") ? ".exe" : "");
-      in = new BufferedInputStream(new URL(JFROG_BASE + resourcePath + filename).openStream());
+      in = new BufferedInputStream(validateJFrogUri(resourcePath, filename).toURL().openStream());
     }
 
     if (in != null) {
@@ -251,7 +250,7 @@ public class InjectorApi extends RestBehavior {
   // -- OPTION --
 
   @GetMapping(INJECT0R_URI + "/options")
-  @RBAC(actionPerformed = Action.SEARCH, resourceType = ResourceType.INJECTOR)
+  @AccessControl(actionPerformed = Action.SEARCH, resourceType = ResourceType.INJECTOR)
   public List<FilterUtilsJpa.Option> optionsByName(
       @RequestParam(required = false) final String searchText,
       @RequestParam(required = false) final String sourceId) {
@@ -264,7 +263,7 @@ public class InjectorApi extends RestBehavior {
   }
 
   @PostMapping(INJECT0R_URI + "/options")
-  @RBAC(actionPerformed = Action.SEARCH, resourceType = ResourceType.INJECTOR)
+  @AccessControl(actionPerformed = Action.SEARCH, resourceType = ResourceType.INJECTOR)
   public List<FilterUtilsJpa.Option> optionsById(
       @RequestBody final List<String> ids, @RequestParam(required = false) final String sourceId) {
     return fromIterable(this.injectorRepository.findAllById(ids)).stream()
